All necessary works is done